# AlphaBench

./: .env.example  .gitignore  README.md  pyproject.toml  run_benchmark.py  run_grid.sh  run_validation_sweep.sh
alphabench/: __init__.py  agent_runtime.py  backtest_engine.py  backtest_registry.py  config.py  contracts.py  dataset_service.py  evaluation_engine.py  leaderboard.py  prompts.py  run_logger.py  sandbox_executor.py  strategy.py  trial_ledger.py
config/: compare_v500.json  compare_v510.json  deepseek_pro_v700_t0p7_turns35_trials15.json  deepseek_pro_v700_t0p7_turns50_trials25.json  deepseek_v700_t0p7_turns35_trials15.json  deepseek_v700_t0p7_turns35_trials25.json  default_agent.json  default_task.json  grid_v600_t0p3_turns20_trials15.json  grid_v600_t0p3_turns20_trials25.json  grid_v600_t0p3_turns35_trials15.json  grid_v600_t0p3_turns35_trials25.json  grid_v600_t0p6_turns20_trials15.json  grid_v600_t0p6_turns20_trials25.json  grid_v600_t0p6_turns35_trials15.json  grid_v600_t0p6_turns35_trials25.json  grid_v600_t0p9_turns20_trials15.json  grid_v600_t0p9_turns20_trials25.json  grid_v600_t0p9_turns35_trials15.json  grid_v600_t0p9_turns35_trials25.json  grid_v601_t0p3_turns20_trials15_ctx100k.json  grid_v601_t0p3_turns20_trials15_ctx50k.json  grid_v601_t0p3_turns20_trials25_ctx100k.json  grid_v601_t0p3_turns20_trials25_ctx50k.json  grid_v601_t0p3_turns35_trials15_ctx100k.json  grid_v601_t0p3_turns35_trials15_ctx50k.json  grid_v601_t0p3_turns35_trials25_ctx100k.json  grid_v601_t0p3_turns35_trials25_ctx50k.json  grid_v601_t0p7_turns20_trials15_ctx100k.json  (+18 more)
(+15 files in other folders)
