[project]
name = "alphabench"
version = "0.1.0"
description = "A benchmark for evaluating LLM agents on end-to-end quantitative research"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.30",
    "vectorbt>=0.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphabench*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
